--- a/Frontend/src/components/Navbar/Navbar.css
+++ b/Frontend/src/components/Navbar/Navbar.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 40px;
+    padding: 15px 40px;
     box-sizing: border-box;
     position: sticky;
     top: 0;
@@ -187,15 +187,15 @@
 .login-button {
     padding: 8px 16px;
     background-color: #FFD700;
-    color: #161616;
+    color: #4A90E2;
     border-radius: 10px;
-    font-weight: 600;
+    font-weight: 400;
     text-decoration: none;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .login-button:hover {
-    background-color: #9accc5;
+    background-color: #f6c500;
 }
 
 /* Profile or Login Button */
